--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,6 @@ html {
 
     .hand {
       width: 50%;
-      height: 6px;
       background: black;
       position: absolute;
       top: 50%;
@@ -47,4 +46,16 @@ html {
       transform: rotate(90deg);
       transition: all .5s;
       transition-timing-function: cubic-bezier(.1, 2.7, .58, 1); 
+    }
+
+    .hour-hand {
+      height: 10px;
+    }
+
+    .min-hand {
+      height: 7px;
+    }
+
+    .second-hand {
+      height: 4px;
     }
