changed transition time to none

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ html {
       top: 50%;
       transform-origin: 100%;
       transform: rotate(90deg);
-      transition: all .5s;
+      transition: none;
       transition-timing-function: cubic-bezier(.1, 2.7, .58, 1); 
     }
 
